# masbisa

./: .gitignore  .mise.toml  README.md  TODO.md  commit-style.md  docker-compose.yml
.cursor/rules/: generated-code-comments.mdc
backend/: .env.example  package.json  pnpm-lock.yaml  pyproject.toml
backend/api/: serializers.py  urls.py  views.py
backend/config/: settings.py  urls.py
backend/src/: index.ts
frontend/: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/context/: -auth-context.tsx  auth-context.tsx
frontend/src/lib/: api.ts  auth.ts
frontend/src/router/: context.ts  use-router-auth.ts
frontend/src/routes/: -authenticated.tsx  -login.tsx  -root-layout.tsx  __root.tsx  _authenticated.tsx  authgate.tsx  login.tsx
frontend/src/routes/_authenticated/: -index.tsx  index.tsx
frontend/src/types/: auth.ts
